added basic logic
the necessary components, methods for deleting, adding and naming the task list have been created

--- a/src/views/styles/reset.scss
+++ b/src/views/styles/reset.scss
@@ -1,3 +1,12 @@
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	font: inherit;
+	color: inherit;
+	column-gap: inherit;
+}
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -22,20 +31,98 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+
+html,
+body {
+	min-height: 100%;
+}
+
+html {
+	height: 100%;
+
+	// Uncomment to hide the default scrollbar:
+	//-ms-overflow-style: none;
+	//scrollbar-width: none;
+
+	&::-webkit-scrollbar {
+		display: none;
+	}
+}
+
 body {
 	line-height: 1;
+	overflow-x: hidden;
+	overflow-y: scroll;
+	-webkit-tap-highlight-color: rgba(#fff, 0);
 }
+
 ol, ul {
 	list-style: none;
 }
+
 blockquote, q {
 	quotes: none;
 }
+
 blockquote:before, blockquote:after,
 q:before, q:after {
 	content: '';
 }
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+
+a {
+	text-decoration: none;
+}
+
+input,
+a,
+textarea {
+	&:focus {
+		outline: none;
+	}
+}
+
+input,
+textarea {
+	-webkit-appearance: none;
+
+	&:invalid {
+		box-shadow: none;
+	}
+
+	&:disabled {
+		cursor: not-allowed;
+	}
+}
+
+button {
+	background-color: transparent;
+	outline-color: transparent;
+	border: 0;
+	cursor: pointer;
+
+	&:focus {
+		outline: none;
+	}
+
+	&::-moz-focus-inner {
+		border: 0;
+	}
+}
+
+mark {
+	background-color: transparent;
+}
+
+svg[role="img"] {
+	pointer-events: none;
+	overflow: visible;
+}
+
+img:not([src]):not([srcset]) {
+	visibility: hidden;
 }
