--- a/src/views/App/index.module.scss
+++ b/src/views/App/index.module.scss
@@ -1,6 +1,7 @@
 .main {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: max-content;
   column-gap: 24px;
   min-width: 600px;
   min-height: 450px;
@@ -9,10 +10,29 @@
   border-radius: 24px;
 }
 
-.mainTitle {
+.mainHeader {
   grid-column: 1 / -1;
-  justify-self: center;
+  padding-bottom: 24px;
+  border-bottom: 2px solid silver;
+}
+
+.mainTitle {
+  text-align: center;
   font-weight: bold;
   font-size: 40px;
   margin-bottom: 12px;
+}
+
+.mainTasks {
+  grid-column: 1 / -1;
+  display: flex;
+  flex-direction: column;
+  row-gap: 12px;
+  padding-top: 48px;
+}
+
+.mainTasksText {
+  text-align: center;
+  font-size: 24px;
+  font-weight: 600;
 }
